sekarang bisa ngeklik si cardnya horreeee karena gabut tapi masih pake vector

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.LatihanUTS"
         tools:targetApi="31">
         <activity
+            android:name=".clickedCard"
+            android:exported="false" />
+        <activity
             android:name=".main"
             android:exported="false" />
         <activity
